<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.arnav.pocdoc.symptomchecker.SymptomCheckerGenderActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/header"
            layout="@layout/layout_header_back"
            app:activity="@{activity}" />

        <com.badoualy.stepperindicator.StepperIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:stpi_animDuration="2000"
            app:stpi_circleColor="@color/colorGray"
            app:stpi_circleRadius="@dimen/_6sdp"
            app:stpi_doneIconDrawable="@drawable/app_icon"
            app:stpi_indicatorColor="@color/colorPrimary"
            app:stpi_labelColor="@color/black"
            app:stpi_labels="@array/arrSymptomsChecker"
            app:stpi_lineColor="@color/colorGray"
            app:stpi_lineDoneColor="@color/black"
            app:stpi_showDoneIcon="true"
            app:stpi_showLabels="true"
            app:stpi_stepCount="6"
            app:stpi_useBottomIndicator="false" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/indicator">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTC"
                    style="@style/BoldTextViewExtraSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:drawablePadding="@dimen/_4sdp"
                    android:text="@string/what_is_your_sex"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvInfo"
                    style="@style/BoldTextViewExtraSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:drawableStart="@drawable/ic_info"
                    android:drawablePadding="@dimen/_4sdp"
                    android:drawableTint="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:onClick="@{(v)->activity.onViewClick(v)}"
                    android:text="@string/what_should_i_select"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_8ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvFemale"
                    style="@style/BoldTextViewExtraSmall"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/bg_gray_round"
                    android:drawableTop="@drawable/ic_female"
                    android:drawablePadding="@dimen/_6sdp"
                    android:gravity="center"
                    android:hint="@string/someone_else"
                    android:onClick="@{(v)->activity.onViewClick(v)}"
                    android:paddingTop="@dimen/_30sdp"
                    android:paddingBottom="@dimen/_30sdp"
                    android:text="@string/female"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTC" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvMale"
                    style="@style/BoldTextViewExtraSmall"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/bg_gray_round"
                    android:drawableTop="@drawable/ic_male"
                    android:drawablePadding="@dimen/_6sdp"
                    android:gravity="center"
                    android:onClick="@{(v)->activity.onViewClick(v)}"
                    android:paddingTop="@dimen/_30sdp"
                    android:paddingBottom="@dimen/_30sdp"
                    android:text="@string/male"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvFemale" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:onClick="@{(v)->activity.onViewClick(v)}"
                    android:padding="@dimen/_8sdp"
                    android:paddingStart="@dimen/_60sdp"
                    android:paddingEnd="@dimen/_60sdp"
                    android:src="@color/colorPrimary"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:cornerRadius="@dimen/_6sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMale" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>