<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/bg_border_gray">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/BoldTextViewExtraSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:text="(1) They are overweight or obese"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbYes"
                style="@style/BoldTextViewExtraSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_selector"
                android:paddingStart="@dimen/_6sdp"
                android:paddingEnd="0dp"
                android:text="@string/yes" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbNo"
                style="@style/BoldTextViewExtraSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:button="@drawable/radio_selector"
                android:paddingStart="@dimen/_6sdp"
                android:paddingEnd="0dp"
                android:text="@string/no" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbDoNotKnow"
                style="@style/BoldTextViewExtraSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_selector"
                android:checked="true"
                android:paddingStart="@dimen/_6sdp"
                android:paddingEnd="0dp"
                android:text="@string/do_not_know" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>